--- a/app/views/user/messages/_message.html.erb
+++ b/app/views/user/messages/_message.html.erb
@@ -1,4 +1,4 @@
 <div class="left-container d-flex p-2">
   <%= image_tag message.user.get_profile_image(50,50), style: 'border-radius: 50%' %>
-  <p id="message_<%= message.id %>" style="background-color: rgba(0, 185, 0, 0.6); padding: 5px; border-radius: 10px; "><%= message.message %></p>
+  <p id="message_<%= message.id %>" style="background-color: lime; padding: 5px; border-radius: 10px; "><%= message.message %></p>
 </div>
