--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -1,28 +1,28 @@
-
-<div class="container">
-  <% game.comments.each do |comment| %>
+<% game.comments.each do |comment| %>
+<div class="comment-box">
   <div class="row">
-  <div class="col-2 text-center">
-      <%= link_to user_path(comment.user) do %>
-        <%= image_tag comment.user.get_profile_image(80,80), style: 'border-radius: 50%' %><br>
-        <h4><%= comment.user.name %></h4>
-      <%end%>
-  </div>
-
-  <div class="col-9">
-    <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %><br>
-    <!--改行できるようにした-->
-    <%= safe_join(comment.comment.split("\n"),tag(:br))%>
-  <div>
-    <div>
-    <% if comment.user==current_user %>
-      <%= link_to "削除", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger",remote: true %>
-    <% end %>
+    <div class="col-2 text-center">
+        <%= link_to user_path(comment.user) do %>
+          <%= image_tag comment.user.get_profile_image(80,80), style: 'border-radius: 50%' %><br>
+          <h4><%= comment.user.name %></h4>
+        <%end%>
     </div>
-    <div id="nice_buttons_<%= comment.id %>"><%= render 'user/comments/nice', comment: comment %></div>
+
+    <div class="col-9">
+      <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %><br>
+      <!--改行できるようにした-->
+      <%= safe_join(comment.comment.split("\n"),tag(:br))%>
+      <div id="nice_buttons_<%= comment.id %>"><%= render 'user/comments/nice', comment: comment %></div>
+    </div>
+    <div class="row">
+      <div class="text-right">
+      <% if comment.user==current_user %>
+        <%= link_to "削除", game_comment_path(game, comment), method: :delete,"data-confirm"=>"本当に消しますか？", class:"btn btn-sm btn-danger text-end m-3",remote: true %>
+      <% end %>
+      </div>
+    </div>
   </div>
-  </div>
-  </div>
-  <%end%>
 </div>
+<%end%>
+
 
