--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -2,21 +2,21 @@
   <div class="container">
     <div class="row">
       <div class="mx-auto col-11 col-sm-10 col-lg-8 col-cl-6">
-        <h1>ゲムトモ</h1>
-        <p>ゲーム仲間を探そう！</p>
+        <h1 class="gametomo">ゲムトモ</h1>
+        <p class="top-text col-4"> ゲーム仲間を探そう！</p>
 
-        <div class="btn-wrapper col-10 mx-auto">
-          <div class="row">
+        <div class="btn-wrapper col-6 mx-auto">
+          <div class="row m-3">
             <%= link_to "ゲストログイン（閲覧用）", user_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
           </div>
-          <div class="row">
+          <div class="row m-3">
             <%= link_to new_user_session_path, class: 'btn btn-info btn-sm btn-block mb-3' do %>
             ログイン
             <%end%>
           </div>
-          <div class="row">
+          <div class="row m-3">
             <%= link_to new_user_registration_path, class: 'btn btn-success btn-sm btn-block mb-3' do %>
-            サインアップ
+            新規登録
             <%end%>
           </div>
         </div>
