--- a/app/views/user/comments/_index.html.erb
+++ b/app/views/user/comments/_index.html.erb
@@ -1,4 +1,4 @@
-<% game.comments.each do |comment| %>
+<% comments.each do |comment| %>
 <div class="comment-box">
   <div class="row">
     <div class="col-2 text-center">
