--- a/app/views/user/messages/create.js.erb
+++ b/app/views/user/messages/create.js.erb
@@ -1,2 +1,2 @@
-$('.message').append('<%= j(render "user/messages/message", message: @message) %>');
+$('.message').prepend('<%= j(render "user/messages/message", message: @message) %>');
 $('input[type=text]').val("")
