デプロイ前

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -33,7 +33,7 @@
 
     <div class="col-md-8 offset-md-1">
       <h2>投稿</h2>
-      <% @user.comments.each do |comment| %>
+      <% @comments.each do |comment| %>
       <div class="comment-box">
         <div class="row">
           <div class="col-2 text-center">
