--- a/app/views/user/users/_index.html.erb
+++ b/app/views/user/users/_index.html.erb
@@ -1,9 +1,9 @@
-<table class='table'>
+<table class='table table-hover'>
   <thead>
-    <tr>
+    <tr >
       <th>image</th>
       <th>name</th>
-      <th>pratform</th>
+      <th>platform</th>
       <th colspan="3"></th>
     </tr>
   </thead>
