新規登録画面レスポンシブ

--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -26,7 +26,7 @@
             <tr>
               <td>名前</td>
               <td>
-                <%= f.text_field :name, rows:'3', placeholder: "商品名" %>
+                <%= f.text_field :name, rows:'3', placeholder: "名前" %>
               </td>
             </tr>
             <tr>
