--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
   <%= form_with model: @user, url: user_registration_path do |f| %>
     <%= render "user/shared/error_messages", resource: resource %>
-  <table class="table table-center col-6">
+  <table class="table table-center col-lg-6">
     <tr>
       <td><%= f.label :名前 %></td>
       <td><%= f.text_field :name, autofocus: true, autocomplete: "name" %></td>
